# klag-exporter

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dev  Dockerfile.release  LICENSE  README.md  config.example.toml  flake.nix  release-plz.toml
.claude/skills/rust/: SKILL.md
.github/workflows/: ci.yml  docker.yaml  helm-chart.yml  nais.yaml  post-release.yml  publish.yml  release-plz-pr.yml  release-plz.yml  release.yml
docs/: compaction-detection.md  high-availability.md  metrics-collection.md
helm/k8s-test-stack/: Readme.md  test-consumer.yaml  test-producer.yaml  test-values.yaml
helm/klag-exporter/: Chart.yaml  Feature.yaml  Readme.md  values.yaml
helm/klag-exporter/templates/: NOTES.txt  _helpers.tpl  aivenapplication.yaml  configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/klag-exporter/templates/tests/: test-connection.yaml
src/: config.rs  error.rs  main.rs  test_strategies.rs
src/cluster/: manager.rs  mod.rs
src/collector/: lag_calculator.rs  mod.rs  offset_collector.rs  timestamp_sampler.rs
src/export/: mod.rs  otel.rs  prometheus.rs
src/http/: server.rs
src/kafka/: admin.rs  client.rs  consumer.rs  mod.rs
src/leadership/: kubernetes.rs  mod.rs  noop.rs
src/metrics/: definitions.rs  mod.rs  registry.rs  types.rs
test-stack/: DETAILED_GUIDE.md  README.md  docker-compose.yml  klag-config.toml
test-stack-large-cluster/: .env  README.md  docker-compose.yml  klag-config.toml
test-stack-large-cluster/grafana/provisioning/dashboards/: dashboard.yml  kafka-lag.json
test-stack-large-cluster/otel/: otel-collector-config.yaml
test-stack-large-cluster/prometheus/: prometheus.yml
test-stack-large-cluster/scripts/: consumer.sh  create-topics.sh  producer.sh
test-stack/grafana/provisioning/dashboards/: kafka-lag.json
test-stack/otel/: otel-collector-config.yaml
test-stack/scripts/: consumer.sh  producer.sh
