[package]
name = "klag-exporter"
version = "0.1.1"
edition = "2021"
description = "High-performance Kafka consumer group lag exporter with offset and time lag metrics"
authors = ["Krzysztof Grajek"]
license = "MIT"
repository = "https://github.com/softwaremill/klag-exporter"
homepage = "https://github.com/softwaremill/klag-exporter"
documentation = "https://docs.rs/klag-exporter"
readme = "README.md"
keywords = ["kafka", "prometheus", "metrics", "lag", "exporter"]
categories = ["development-tools::profiling"]
exclude = ["test-stack/", "docs/", ".github/", ".claude/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

axum = "0.7"
prometheus = "0.14"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"
config = "0.14"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

regex = "1"
dashmap = "6"
thiserror = "1"
anyhow = "1"
humantime-serde = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tower = "0.4"

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["kafka"] }
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
