[package]
name = "klag-exporter"
version = "0.1.15"
edition = "2024"
description = "High-performance Kafka consumer group lag exporter with offset and time lag metrics"
authors = ["Krzysztof Grajek"]
license = "MIT"
repository = "https://github.com/softwaremill/klag-exporter"
homepage = "https://github.com/softwaremill/klag-exporter"
documentation = "https://docs.rs/klag-exporter"
readme = "README.md"
keywords = ["kafka", "prometheus", "metrics", "lag", "exporter"]
categories = ["development-tools::profiling"]
exclude = ["test-stack/", "docs/", ".github/", ".claude/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { features = ["cmake-build", "ssl", "sasl"], git = "https://github.com/x10an14-nav/rust-rdkafka" }

axum = "0.7"
prometheus = "0.14"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"
config = "0.14"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

regex = "1"
dashmap = "6"
thiserror = "1"
anyhow = "1"
humantime-serde = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tower = "0.4"
async-trait = "0.1"

# Kubernetes leader election (optional)
kube = { version = "0.99", features = ["client", "runtime", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_32"], optional = true }
kube-lease-manager = { version = "0.8", optional = true }
tokio-util = { version = "0.7", features = ["rt"] }
proptest = "1"

[features]
default = []
kubernetes = ["kube", "k8s-openapi", "kube-lease-manager"]

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["kafka"] }
tokio-test = "0.4"
temp-env = "0.3"
tempfile = "3"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
